# docchat

./: .flake8  .gitignore  .gitmodules  README.md  chat.py  pyproject.toml  requirements.txt
.github/workflows/: flake8.yml  integration.yml  tests.yml
tools/: __init__.py  calculate.py  cat.py  compact.py  doctests.py  grep.py  load_image.py  ls.py  pip_install.py  rm.py  write_file.py
